# find-exe

./: 404.html  README.md  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  ruff_defaults.toml  sitemap.xml
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  index.md
search/: search_index.json
src/find_exe/: __init__.py  __main__.py  _core.py  cli.py
tests/: test_cli.py  test_condition.py  test_pattern.py  test_prefix.py
